--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 logging.level.com.example.bouncycastle=DEBUG
 logging.pattern.level=correlationId:[%X{correlationId}] %5p
+secret.property=ENC(eC6XrCl4zDARSpUI7AEFzWcXBXGjAMFRSwR+tClkIEc=)
+
+
+jasypt.encryptor.password=admin
+jasypt.encryptor.algorithm=PBEWITHSHA256AND128BITAES-CBC-BC
+jasypt.encryptor.keyObtentionIterations=1000
+jasypt.encryptor.poolSize=1
+jasypt.encryptor.providerName=BC
+jasypt.encryptor.saltGeneratorClassname=org.jasypt.salt.RandomSaltGenerator
+jasypt.encryptor.stringOutputType=base64
